# SPIRV-VM

./: .gitignore  .wyvrnignore  CMakeLists.txt  wyvrn.json
cmake/: SPIRV-VMConfig.cmake.in
